Implement relationship between users and locations. Add users to locationShchema. Add location reference on userSchema. Remove membershipInfo from user. Optimize params to render on dashboardController.

--- a/views/ajaxSnippets/validationResult.ejs
+++ b/views/ajaxSnippets/validationResult.ejs
@@ -48,7 +48,7 @@
                 </p>
                 <p>
                     <b>
-                        Current Period End Start:
+                        Current Period Start:
                     </b>
                     <%= moment(stripeSubscription?.current_period_start * 1000).isValid() ? moment(stripeSubscription?.current_period_start * 1000).format(completeDateFormat) : 'N/A' %>
 
