--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -67,7 +67,7 @@
                                                             <th>Role</th>
                                                             <th>Email</th>
                                                             <th>Phone</th>
-                                                            <th>Plan</th>
+                                                            <!-- <th>Plan</th> -->
                                                             <th>Action</th>
                                                         </tr>
                                                     </thead>
@@ -94,9 +94,9 @@
                                                                 <%- user.personalInfo.phoneNumber %>
                                                             </td>
 
-                                                            <td>
-                                                                <%- user.membershipInfo.plan%>
-                                                            </td>
+                                                            <!-- <td> -->
+                                                            <!-- <%# user.membershipInfo.plan%> -->
+                                                            <!-- </td> -->
 
                                                             <td>
                                                                 <a href="/edit-user/<%- user.id%>?url=/users"
