--- a/views/location/create.ejs
+++ b/views/location/create.ejs
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="../vendors/ti-icons/css/themify-icons.css">
     <link rel="stylesheet" href="../vendors/typicons/typicons.css">
     <link rel="stylesheet" href="../vendors/simple-line-icons/css/simple-line-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="../../css/register.css">
 
@@ -32,60 +35,80 @@
     <div class="container-scroller">
         <!-- partial:partials/_navbar.html -->
         <%- include('../partials/navbar.ejs' , {user}); %>
+        <!-- partial -->
+
+        <div class="container-fluid page-body-wrapper">
+            <!-- partial:partials/_sidebar.html -->
+            <%- include('../partials/sidebar.ejs' , {user}); %>
             <!-- partial -->
+            <div class="main-panel">
+                <div class="content-wrapper">
+                    <div class="row">
+                        <div class="col-lg-12 d-flex flex-column">
+                            <div class="row flex-grow">
+                                <div class="col-12 grid-margin stretch-card">
+                                    <div class="card card-rounded">
+                                        <div class="card-body">
+                                            <h4>Create Location</h4>
+                                            <form id="form-create-location" class="pt-3" action="/create-location"
+                                                method="post">
+                                                <div class="row">
+                                                    <div class="col-lg-6">
 
-            <div class="container-fluid page-body-wrapper">
-                <!-- partial:partials/_sidebar.html -->
-                <%- include('../partials/sidebar.ejs' , {user}); %>
-                    <!-- partial -->
-                    <div class="main-panel">
-                        <div class="content-wrapper">
-                            <div class="row">
-                                <div class="col-lg-12 d-flex flex-column">
-                                    <div class="row flex-grow">
-                                        <div class="col-12 grid-margin stretch-card">
-                                            <div class="card card-rounded">
-                                                <div class="card-body">
-                                                    <h4>Create Location</h4>
-                                                    <form id="form-create-location" class="pt-3" action="/create-location" method="post">
-                                                        <div class="row">
-                                                            <div class="col-lg-6">
+                                                        <div class="form-group">
+                                                            <label class="required" for="name">Name</label>
+                                                            <input autocomplete="off" type="text" id="name" name="name"
+                                                                class="form-control form-control-lg" required />
 
-                                                                <div class="form-group">
-                                                                    <label class="required" for="name">Name</label>
-                                                                    <input autocomplete="off" type="text" id="name" name="name" class="form-control form-control-lg" required />
-
-                                                                </div>
-
-                                                                <div class="form-group">
-                                                                    <label>Select Services</label>
-                                                                    <select name="services" id="services" class="form-control form-control-lg js-example-basic-multiple w-100" multiple="multiple">
-                                                                        <% for(const product of products) { %>       
-                                                                            <option value="<%= product.id %>"><%= product.name %></option>
-                                                                        <% }%>
-                                                                    </select>
-                                                                </div>
-                                                            </div>
                                                         </div>
-                                                        <div class="row">
-                                                            <div class="mt-3">
 
-                                                                <a href="/location" class="btn btn-block btn-light btn-lg font-weight-medium auth-form-btn float-end">Cancel</a>
-
-                                                                <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end" type="submit">Create</button>
-                                                            </div>
+                                                        <div class="form-group">
+                                                            <label>Select Services</label>
+                                                            <select name="services" id="services"
+                                                                class="form-control form-control-lg js-example-basic-multiple w-100"
+                                                                multiple="multiple">
+                                                                <% for(const product of products) { %>
+                                                                <option value="<%= product.id %>"><%= product.name %>
+                                                                </option>
+                                                                <% }%>
+                                                            </select>
                                                         </div>
-                                                    </form>
+                                                        <div class="form-group">
+                                                            <label>Select Users</label>
+                                                            <select name="users" id="users"
+                                                                class="form-control form-control-lg js-example-basic-multiple w-100"
+                                                                multiple="multiple">
+                                                                <% for(const user of users) { %>
+                                                                <option value="<%= user.id%>">
+                                                                    <%= user.personalInfo.firstName +' '+ user.personalInfo.lastName %> (<%= user.role%>)
+                                                                </option>
+                                                                <% } %>
+                                                            </select>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                            </div>
+                                                <div class="row">
+                                                    <div class="mt-3">
+
+                                                        <a href="/location"
+                                                            class="btn btn-block btn-light btn-lg font-weight-medium auth-form-btn float-end">Cancel</a>
+
+                                                        <button
+                                                            class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end"
+                                                            type="submit">Create</button>
+                                                    </div>
+                                                </div>
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
             </div>
-            <!-- page-body-wrapper ends -->
+        </div>
+        <!-- page-body-wrapper ends -->
     </div>
     <!-- container-scroller -->
 
@@ -97,7 +120,8 @@
     <script src="../vendors/select2/select2.min.js"></script>
     <script src="../vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
     <script src="../vendors/progressbar.js/progressbar.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
     <!-- End plugin js for this page -->
     <!-- inject:js -->
