--- a/views/location/view.ejs
+++ b/views/location/view.ejs
@@ -95,8 +95,7 @@
                                                                 <ul>
                                                                     <% for(user of location.users){ %>
                                                                     <li>
-                                                                        <%- user.personalInfo.firstName + ' ' + user.personalInfo.lastName %>
-                                                                        - <%- user.role%>
+                                                                        <%- user.personalInfo.firstName + ' ' + user.personalInfo.lastName %> (<%- user.role%>)
                                                                     </li>
                                                                     <% } %>
                                                                 </ul>
