--- a/views/ajaxSnippets/validationResult.ejs
+++ b/views/ajaxSnippets/validationResult.ejs
@@ -1,15 +1,26 @@
-<h4>Membership Status</h4>
 <div class="row">
     <div class="col-lg-12">
-        <% if(customer) { %>
-
         <div class="row">
-            <div class="col-md-8">
+            <% if(customer) { %>
+            <div class="col-md-6">
+                <div class="d-sm-flex justify-content-between align-items-start">
+                    <div>
+                        <h4>Customer Information </h4>
+                    </div>
+                    <div>
+                        <!-- <a href="/create-user" class="btn btn-primary btn-icon-text" type="button"><i class="mdi mdi-map-marker-plus btn-icon-prepend"></i>Add
+                            User</a> -->
+                        <a href="/edit-user/<%- customer?.id%>?url=/validateMembership" type="button"
+                            data-toggle="tooltip" title="Edit user" class="btn btn-icon btn-icon-no-border no-margin">
+                            <span class="far fa-2x fa-edit icon-sm"></span>
+                        </a>
+                    </div>
+                </div>
                 <p>
                     <b>
                         Name:
                     </b>
-                    <%- customer?.personalInfo.firstName%>
+                    <%- customer?.personalInfo.firstName + ' ' + customer?.personalInfo.lastName %>
                 </p>
 
                 <p>
@@ -72,24 +83,53 @@
                 <% } %>
 
             </div>
-            <div class="col-md-4 text-center">
-                <% if([stripeStatus.ACTIVE, stripeStatus.TRIALING].includes(membershipStatus)) { %>
-                <i class="fas fa-4x fa-check-circle valid"></i>
-                <p>Valid Membership</p>
-                <%}else if(membershipStatus==stripeStatus.CANCELED){%>
-                <i class="far fa-4x fa-times-circle invalid"></i>
-                <p>Canceled Membership</p>
-                <%}else if(membershipStatus==stripeStatus.UNPAID){%>
-                <i class="far fa-4x fa-times-circle invalid"></i>
-                <p>Unpaid Membership</p>
-                <%}else if(membershipStatus==stripeStatus.NONE){%>
-                <i class="far fa-4x fa-times-circle invalid"></i>
-                <p>This user don't have Membership</p>
-                <%}%>
+            <div class="col-md-6">
+                <h4 class="text-center">Membership Status</h4>
+                <br>
+                <div class="col-md-12 text-center validation-msgs">
+                    <% if([stripeStatus.ACTIVE, stripeStatus.TRIALING].includes(membershipStatus)) { %>
+                    <i class="fas fa-8x fa-check-circle valid"></i>
+                    <p style="text-transform: uppercase">
+                        <%= membershipStatus %>
+                    </p>
+                    <br>
+
+                    <div class="mt-3 mb-3">
+                        <button id="useServiceBtn" class="btn btn-block btn-primary btn-lg font-weight-medium btn-icon-text"
+                            type="submit">
+                            USE SERVICE
+                            <i class="menu-icon mdi mdi-car-wash btn-icon-apepend"></i>
+
+                        </button>
+                    </div>
+
+                    <% } else if([stripeStatus.CANCELED, stripeStatus.UNPAID, stripeStatus.NONE].includes(membershipStatus)) { %>
+                    <i class="far fa-8x fa-times-circle invalid"></i>
+                    <p style="text-transform: uppercase">
+                        <%= membershipStatus %>
+                    </p>
+                    <br>
+                    <!-- <div class="mt-3 mb-3">
+                    <button id="useServiceBtn" class="btn btn-block btn-primary font-weight-medium" type="submit">Manage
+                        Billing</button>
+                </div> -->
+
+                    <button class="btn btn-primary btn-lg text-white mb-0 me-0 manage-billing-button" type="submit"
+                        value="<%- customer.billingID%>" email="<%- customer.email%>">
+                        Manage Billing
+                    </button>
+                    <% } %>
+                </div>
+                <% } else { %>
+                <div class="col-md-12 text-center validation-msgs">
+                    <i class="fas fa-8x fa-exclamation-triangle warning"></i>
+                    <p>Customer not found.</p>
+
+                    <% } %>
+                </div>
             </div>
         </div>
-            <% } else { %>
-                <p>Customer not found.</p>
-                <% } %>
-            </div>
-        </div>
+    </div>
+</div>
+
+<script type="text/javascript" src="./js/account.js"></script>
