--- a/views/dashboards/validateMembership.ejs
+++ b/views/dashboards/validateMembership.ejs
@@ -13,11 +13,12 @@
     <link rel="stylesheet" href="../vendors/typicons/typicons.css">
     <link rel="stylesheet" href="../vendors/simple-line-icons/css/simple-line-icons.css">
     <link rel="stylesheet" href="../vendors/css/vendor.bundle.base.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- endinject -->
     <!-- Plugin css for this page -->
-    <link rel="stylesheet" href="../vendors/datatables.net-bs4/dataTables.bootstrap4.css">
+    <!-- <link rel="stylesheet" href="../vendors/datatables.net-bs4/dataTables.bootstrap4.css"> -->
     <link rel="stylesheet" href="../js/select.dataTables.min.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css">
@@ -35,42 +36,48 @@
 <body>
     <div class="container-scroller">
         <%- include('../partials/navbar.ejs' , {user}); %>
-            <div class="container-fluid page-body-wrapper">
-                <%- include('../partials/sidebar.ejs' , {user}); %>
-                    <div class="main-panel">
-                        <div class="content-wrapper">
-                            <div class="row">
-                                <div class="col-lg-12 d-flex flex-column">
-                                    <div class="row flex-grow">
-                                        <div class="col-12 grid-margin stretch-card">
-                                            <div class="card card-rounded">
-                                                <div class="card-body">
-                                                    <div class="row">
-                                                        <div class="col-lg-4">
-                                                            <h4>Validate</h4>
+        <div class="container-fluid page-body-wrapper">
+            <%- include('../partials/sidebar.ejs' , {user}); %>
+            <div class="main-panel">
+                <div class="content-wrapper">
+                    <div class="row">
+                        <div class="col-lg-12 d-flex flex-column">
+                            <div class="row flex-grow">
+                                <div class="col-12 grid-margin stretch-card">
+                                    <div class="card card-rounded">
+                                        <div class="card-body">
+                                            <div class="row">
+                                                <div class="col-lg-4">
+                                                    <h4>Validate</h4>
 
-                                                            <form id="form-validate-membership" class="pt-3" method="post">
-                                                                <div class="row">
-                                                                    <div class="col-lg-12">
-                                                                        <div class="form-group">
-                                                                            <label class="required" for="name">Tag Number</label>
-                                                                            <input autocomplete="off" type="text" id="tagNumber" name="tagNumber" class="form-control form-control-lg" required />
+                                                    <form id="form-validate-membership" class="pt-3" method="post">
+                                                        <div class="row">
+                                                            <div class="col-lg-12">
+                                                                <div class="form-group">
+                                                                    <label class="required" for="name">Tag
+                                                                        Number</label>
+                                                                    <input autocomplete="off" type="text" id="tagNumber"
+                                                                        name="tagNumber"
+                                                                        class="form-control form-control-lg" required />
 
-                                                                        </div>
-                                                                    </div>
-                                                                    <!-- </div>
-                                                                <div class="row"> -->
-                                                                    <div class="mt-3 mb-3">
-                                                                        <button id="validateMembershipBtn" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end" type="submit">Validate</button>
-                                                                    </div>
                                                                 </div>
-                                                            </form>
+                                                            </div>
+                                                            <!-- </div>
+                                                                <div class="row"> -->
+                                                            <div class="mt-3 mb-3">
+                                                                <button id="validateMembershipBtn"
+                                                                    class="btn btn-block btn-inverse-dark btn-lg font-weight-medium auth-form-btn float-end"
+                                                                    type="submit">Validate</button>
+                                                            </div>
                                                         </div>
-                                                        <div class="col-lg-8">
-                                                            <div id="membershipDetails"></div>
-                                                        </div>
-                                                    </div>
-
+                                                    </form>
+                                                </div>
+                                                <div class="col-lg-8">
+                                                    <!-- <div class="lds-ring text-center" style="display: none;">
+                                                        <img src="/images/loading-spinner.gif" width="10%"
+                                                            alt="spinner">
+                                                    </div> -->
+                                                    <div id="membershipDetails"></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -79,7 +86,9 @@
                             </div>
                         </div>
                     </div>
+                </div>
             </div>
+        </div>
     </div>
     <!-- page-body-wrapper ends -->
     </div>
@@ -92,7 +101,8 @@
     <script src="../vendors/chart.js/Chart.min.js"></script>
     <script src="../vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
     <script src="../vendors/progressbar.js/progressbar.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
     <!-- End plugin js for this page -->
     <!-- inject:js -->
@@ -105,7 +115,7 @@
     <!-- Custom js for this page-->
 
     <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
-    <script type="text/javascript" src="../js/account.js"></script>
+    <!-- <script type="text/javascript" src="../js/account.js"></script> -->
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../js/dashboard.js"></script>
     <script src="../js/Chart.roundedBarCharts.js"></script>
@@ -119,39 +129,54 @@
     <!-- Alerts Code -->
     <%- include('../partials/alerts.ejs', {message, alertType}); %>
 
-        <script>
-            $("#validateMembershipBtn").on("click", function(event) {
-                event.preventDefault();
-                event.stopPropagation();
-                var valueToValidate = $("#tagNumber");
+    <script>
+        // $(document).ajaxSend(function () {
+        //     $("#overlay").fadeIn(300);
+        // });
+        $("#validateMembershipBtn").on("click", function (event) {
+            event.preventDefault();
+            event.stopPropagation();
+            var valueToValidate = $("#tagNumber");
+            // reportValidity and checkValidity validate inputs on form.
+            valueToValidate[0].reportValidity();
+            if (valueToValidate[0].checkValidity()) {
+                $.ajax({
+                    url: "/validateMembership",
+                    type: "POST",
+                    contentType: "application/json",
+                    data: JSON.stringify({
+                        tagNumber: valueToValidate.val()
+                    }),
+                    beforeSend: function () {
+                        showResult(`
+                        <div class="lds-ring text-center">
+                            <img src="/images/loading-spinner.gif" width="15%" alt="spinner">
+                        </div>`
+                        );
 
-                valueToValidate[0].reportValidity();
-                if (valueToValidate[0].checkValidity()) {
-                    $.ajax({
-                        url: "/validateMembership",
-                        type: "POST",
-                        contentType: "application/json",
-                        data: JSON.stringify({
-                            tagNumber: valueToValidate.val()
-                        })
-                    }).done(function(result) {
-                        showResult(result);
-                        cleanInput("tagNumber")
-                    }).fail(function(err) {
-                        console.log(err);
-                    })
-                }
-            });
-
-
-            var showResult = function(result) {
-                $("#membershipDetails").html(result);
+                        // $(".lds-ring").fadeIn(300);
+                    },
+                    // success: function () {
+                        // $(".lds-ring").fadeOut(300);
+                    // }
+                }).done(function (result) {
+                    showResult(result);
+                    cleanInput("tagNumber");
+                }).fail(function (err) {
+                    console.log(err);
+                })
             }
-            var cleanInput = function(input) {
-                var removeThis = document.getElementById(input);
-                removeThis.value = '';
-            }
-        </script>
+        });
+
+
+        var showResult = function (result) {
+            $("#membershipDetails").html(result);
+        }
+        var cleanInput = function (input) {
+            var removeThis = document.getElementById(input);
+            removeThis.value = '';
+        }
+    </script>
 </body>
 
 </html>
