--- a/views/location/edit.ejs
+++ b/views/location/edit.ejs
@@ -89,7 +89,7 @@
                                                                 <% for(const user of users) { %>
                                                                 <% var selected = (location.users.includes(user.id)) ? "selected" : "";   %>
                                                                 <option value="<%= user.id%>" <%=selected%>>
-                                                                    <%= user.personalInfo.firstName +' '+ user.personalInfo.lastName %>
+                                                                    <%= user.personalInfo.firstName +' '+ user.personalInfo.lastName + ' (' + user.role + ')' %>
                                                                 </option>
                                                                 <% } %>
                                                             </select>
