--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -20,8 +20,9 @@
         <ul class="navbar-nav">
             <li class="nav-item font-weight-semibold d-none d-lg-block ms-0">
                 <h1 class="welcome-text">
-                    <%= lingua.welcome%>, <span class="text-black fw-bold"><%- user.personalInfo.firstName%></span></h1>
-                <!-- <h3 class="welcome-sub-text">Your performance summary this week </h3> -->
+                    <%= lingua.welcome%>, <span class="text-black fw-bold"><%- user.personalInfo.firstName%></span>
+                </h1>
+
                 <% if (messages.error) { %>
                 <p class="error">
                     <%= messages.error %>
@@ -34,24 +35,6 @@
                 </p>
                 <% } %>
             </li>
-            <!-- TODO: implement flash or messages -->
-            <!-- <li>
-                <% if (messages.error) { %>
-                    <p class="error">
-                        <%= messages.error %>
-                    </p>
-                    <% } %>
-                        <% if (messages.info) { %>
-                            <p class="info">
-                                <%= messages.info %>
-                            </p>
-                            <% } %>
-                                <% if (messages.success) { %>
-                                    <p class="success">
-                                        <%= messages.success %>
-                                    </p>
-                                    <% } %>
-            </li> -->
         </ul>
         <ul class="navbar-nav ms-auto">
             <%# if([roles.ADMIN].includes(user.role)) { %>
