--- a/views/ajaxSnippets/validationResult.ejs
+++ b/views/ajaxSnippets/validationResult.ejs
@@ -1,8 +1,8 @@
 <div class="row">
-    <div class="col-lg-12">
+    <div class="col-lg-12 card">
         <div class="row">
             <% if(customer) { %>
-            <div class="col-md-6">
+            <div class="col-md-6 p-3">
                 <div class="d-sm-flex justify-content-between align-items-start">
                     <div>
                         <h4>Customer Information </h4>
@@ -83,7 +83,7 @@
                 <% } %>
 
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 p-3">
                 <h4 class="text-center">Membership Status</h4>
                 <br>
                 <div class="col-md-12 text-center validation-msgs">
@@ -95,8 +95,8 @@
                     <br>
 
                     <div class="mt-3 mb-3">
-                        <button id="useServiceBtn" class="btn btn-block btn-primary btn-lg font-weight-medium btn-icon-text"
-                            type="submit">
+                        <button id="useServiceBtn"
+                            class="btn btn-block btn-primary btn-lg font-weight-medium btn-icon-text" type="submit">
                             USE SERVICE
                             <i class="menu-icon mdi mdi-car-wash btn-icon-apepend"></i>
 
@@ -109,11 +109,6 @@
                         <%= membershipStatus %>
                     </p>
                     <br>
-                    <!-- <div class="mt-3 mb-3">
-                    <button id="useServiceBtn" class="btn btn-block btn-primary font-weight-medium" type="submit">Manage
-                        Billing</button>
-                </div> -->
-
                     <button class="btn btn-primary btn-lg text-white mb-0 me-0 manage-billing-button" type="submit"
                         value="<%- customer.billingID%>" email="<%- customer.email%>">
                         Manage Billing
@@ -131,5 +126,5 @@
         </div>
     </div>
 </div>
-
+<!-- Included account.js for manage billing actions. -->
 <script type="text/javascript" src="./js/account.js"></script>
