--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -41,59 +41,61 @@
                                 <%= lingua.title %>
                             </h6>
                             <% if (messages.error) { %>
-                                <p class="error">
-                                    <%= messages.error %>
-                                </p>
-                                <% } %>
+                            <p class="error">
+                                <%= messages.error %>
+                            </p>
+                            <% } %>
 
-                                    <% if (messages.info) { %>
-                                        <p class="info">
-                                            <%= messages.info %>
-                                        </p>
-                                        <% } %>
-                                            <form id="login-form" class="pt-3" action="/login" method="post">
+                            <% if (messages.info) { %>
+                            <p class="info">
+                                <%= messages.info %>
+                            </p>
+                            <% } %>
+                            <form id="login-form" class="pt-3" action="/login" method="post">
+                                <div class="form-group">
+                                    <input type="email" id="email" name="email" class="form-control form-control-lg"
+                                        value="<%= email%>" placeholder="Email address" required autofocus />
+                                </div>
 
-                                                <div class="form-group">
+                                <div class="form-group">
+                                    <input type="password" id="password" name="password"
+                                        class="form-control mb-3 form-control-lg" placeholder="Password" required
+                                        autofocus />
+                                </div>
 
-                                                    <input type="email" id="email" name="email" class="form-control form-control-lg" value="<%= email%>" placeholder="Email address" required autofocus />
-                                                </div>
+                                <div class="mt-3">
+                                    <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn"
+                                        type="submit"><%= lingua.login%></button>
+                                </div>
+                                <div class="my-2 d-flex justify-content-between align-items-center">
+                                    <!-- <a href="#" class="auth-link text-black">Forgot password?</a> -->
+                                </div>
 
-                                                <div class="form-group">
+                                <div class="text-center mt-4 fw-light">
+                                    <%= lingua.dontHaveAccount %>
+                                    <a href="/create-account" class="text-primary">
+                                        <%= lingua.create %>
+                                    </a>
+                                </div>
+                            </form>
+                            <br>
+                            <div class="btn-group">
+                                <button type="button"
+                                    class="btn btn-sm btn-secondary dropdown-toggle dropdown-toggle-split"
+                                    id="dropdownMenuSplitButton1" data-bs-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="false">
+                                    <%= lingua.selectLanguage%>
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuSplitButton1">
+                                    <a id="es-lang" href="?lang=es" class="dropdown-item">
 
-                                                    <input type="password" id="password" name="password" class="form-control mb-3 form-control-lg" placeholder="Password" required autofocus />
-                                                </div>
-
-                                                <div class="mt-3">
-
-                                                    <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" type="submit"><%= lingua.login%></button>
-                                                </div>
-                                                <div class="my-2 d-flex justify-content-between align-items-center">
-                                                    <!-- <a href="#" class="auth-link text-black">Forgot password?</a> -->
-                                                </div>
-
-                                                <div class="text-center mt-4 fw-light">
-                                                    <%= lingua.dontHaveAccount %>
-                                                        <a href="/create-account" class="text-primary">
-                                                            <%= lingua.create %>
-
-                                                        </a>
-                                                </div>
-                                            </form>
-                                            <br>
-                                            <div class="btn-group">
-                                                <button type="button" class="btn btn-sm btn-secondary dropdown-toggle dropdown-toggle-split" id="dropdownMenuSplitButton1" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                  <%= lingua.selectLanguage%> 
-                                              </button>
-                                                <div class="dropdown-menu" aria-labelledby="dropdownMenuSplitButton1">
-                                                    <a id="es-lang" href="?lang=es" class="dropdown-item">
-
-                                                        <span class="flag-icon flag-icon-pr "></span> ES
-                                                    </a>
-                                                    <a id="en-lang" href="?lang=en" class="dropdown-item">
-                                                        <span class="flag-icon flag-icon-um "></span> EN
-                                                    </a>
-                                                </div>
-                                            </div>
+                                        <span class="flag-icon flag-icon-pr "></span> ES
+                                    </a>
+                                    <a id="en-lang" href="?lang=en" class="dropdown-item">
+                                        <span class="flag-icon flag-icon-um "></span> EN
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -123,17 +125,10 @@
     <script type="text/javascript " src="./js/sweet-alerts.js "></script>
     <script src="./js/helper-functions.js"></script>
 
+    <%- include('../partials/alerts.ejs', {message, alertType}); %>
+
     <script>
-        $(document).ready(function() {
-            var msj = '<%- message %>';
-            var alertType = '<%- alertType %>';
-            var allAlertTypes = '<%- JSON.stringify(alertTypes) %>';
-
-            if (msj !== '' && alertType !== '') {
-                sweetAlerts(allAlertTypes, alertType, msj);
-            }
-
-
+        $(document).ready(function () {
             manageLangDropdown();
 
         });
