--- a/views/dashboards/validateMembership.ejs
+++ b/views/dashboards/validateMembership.ejs
@@ -74,7 +74,7 @@
                                                 </div>
                                                 <div class="col-lg-8">
                                                     <!-- Render results in membershipDetails div -->
-                                                    <div id="membershipDetails"></div>
+                                                    <div class="membershipDetails" id="membershipDetails"></div>
                                                 </div>
                                             </div>
                                         </div>
