Add useService function and services to user schema.
Add function to useService on acount.js

--- a/public/css/vertical-layout-light/style.css
+++ b/public/css/vertical-layout-light/style.css
@@ -15968,6 +15968,10 @@ fieldset:disabled .swal2-modal .swal2-buttonswrapper .swal2-styled,
     }
 }
 
+.spinner {
+    margin: 50px;
+}
+
 .spinner-border {
     display: inline-block;
     width: 2rem;
