--- a/views/ajaxSnippets/validationResult.ejs
+++ b/views/ajaxSnippets/validationResult.ejs
@@ -1,126 +1,131 @@
 <div class="row">
     <div class="col-lg-12 card">
-        <div class="row">
-            <% if(customer) { %>
-            <div class="col-md-6 p-3">
-                <div class="d-sm-flex justify-content-between align-items-start">
-                    <div>
-                        <h4>Customer Information </h4>
-                    </div>
-                    <div>
-                        <!-- <a href="/create-user" class="btn btn-primary btn-icon-text" type="button"><i class="mdi mdi-map-marker-plus btn-icon-prepend"></i>Add
+        <div id="useServiceUpdate">
+            <div class="row">
+                <% if(customer) { %>
+                <div class="col-md-6 p-3">
+                    <div class="d-sm-flex justify-content-between align-items-start">
+                        <div>
+                            <h4>Customer Information </h4>
+                        </div>
+                        <div>
+                            <!-- <a href="/create-user" class="btn btn-primary btn-icon-text" type="button"><i class="mdi mdi-map-marker-plus btn-icon-prepend"></i>Add
                             User</a> -->
-                        <a href="/edit-user/<%- customer?.id%>?url=/validateMembership" type="button"
-                            data-toggle="tooltip" title="Edit user" class="btn btn-icon btn-icon-no-border no-margin">
-                            <span class="far fa-2x fa-edit icon-sm"></span>
-                        </a>
+                            <a href="/edit-user/<%- customer?.id%>?url=/validateMembership" type="button"
+                                data-toggle="tooltip" title="Edit user"
+                                class="btn btn-icon btn-icon-no-border no-margin">
+                                <span class="far fa-2x fa-edit icon-sm"></span>
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <p>
-                    <b>
-                        Name:
-                    </b>
-                    <%- customer?.personalInfo.firstName + ' ' + customer?.personalInfo.lastName %>
-                </p>
-
-                <p>
-                    <b>
-                        Email:
-                    </b>
-                    <%- customer?.email%>
-                </p>
-                <p>
-                    <b>
-                        Car Brand:
-                    </b>
-                    <%- customer.carInfo.brand%>
-
-                </p>
-                <p>
-                    <b>
-                        Model:
-                    </b>
-                    <%- customer.carInfo.model%>
-                </p>
-                <p>
-                    <b>
-                        Plate:
-                    </b>
-                    <%- customer.carInfo.plate%>
-                </p>
-
-                <p>
-                    <b>
-                        Membership:
-                    </b>
-                    <span style="text-transform: uppercase;">
-                        <%- membershipStatus%>
-                    </span>
-                </p>
-                <p>
-                    <b>
-                        Current Period Start:
-                    </b>
-                    <%= moment(stripeSubscription?.current_period_start * 1000).isValid() ? moment(stripeSubscription?.current_period_start * 1000).format(completeDateFormat) : 'N/A' %>
-
-                </p>
-                <p>
-                    <b>
-                        Current Period End Date:
-                    </b>
-                    <%= moment(stripeSubscription?.current_period_end * 1000).isValid() ? moment(stripeSubscription?.current_period_end * 1000).format(completeDateFormat) : 'N/A' %>
-
-                </p>
-
-                <% if(stripeSubscription?.trial_end) { %>
-                <p>
-                    <b>
-                        Trial Expiration Date:
-                    </b>
-                    <%= moment(stripeSubscription?.trial_end * 1000).isValid() ? moment(stripeSubscription?.trial_end * 1000).format(completeDateFormat) : 'N/A' %>
-
-                </p>
-                <% } %>
-
-            </div>
-            <div class="col-md-6 p-3">
-                <h4 class="text-center">Membership Status</h4>
-                <br>
-                <div class="col-md-12 text-center validation-msgs">
-                    <% if([stripeStatus.ACTIVE, stripeStatus.TRIALING].includes(membershipStatus)) { %>
-                    <i class="fas fa-8x fa-check-circle valid"></i>
-                    <p style="text-transform: uppercase">
-                        <%= membershipStatus %>
+                    <p>
+                        <b>
+                            Name:
+                        </b>
+                        <%- customer?.personalInfo.firstName + ' ' + customer?.personalInfo.lastName %>
                     </p>
+
+                    <p>
+                        <b>
+                            Email:
+                        </b>
+                        <%- customer?.email%>
+                    </p>
+                    <p>
+                        <b>
+                            Car Brand:
+                        </b>
+                        <%- customer.carInfo.brand%>
+
+                    </p>
+                    <p>
+                        <b>
+                            Model:
+                        </b>
+                        <%- customer.carInfo.model%>
+                    </p>
+                    <p>
+                        <b>
+                            Plate:
+                        </b>
+                        <%- customer.carInfo.plate%>
+                    </p>
+
+                    <p>
+                        <b>
+                            Membership:
+                        </b>
+                        <span style="text-transform: uppercase;">
+                            <%- membershipStatus%>
+                        </span>
+                    </p>
+                    <p>
+                        <b>Product:</b>
+                        <%- stripeSubscription.product.name%>
+                    </p>
+                    <p>
+                        <b>
+                            Current Period Start:
+                        </b>
+                        <%= moment(stripeSubscription?.current_period_start * 1000).isValid() ? moment(stripeSubscription?.current_period_start * 1000).format(completeDateFormat) : 'N/A' %>
+
+                    </p>
+                    <p>
+                        <b>
+                            Current Period End Date:
+                        </b>
+                        <%= moment(stripeSubscription?.current_period_end * 1000).isValid() ? moment(stripeSubscription?.current_period_end * 1000).format(completeDateFormat) : 'N/A' %>
+
+                    </p>
+
+                    <% if(stripeSubscription?.trial_end) { %>
+                    <p>
+                        <b>
+                            Trial Expiration Date:
+                        </b>
+                        <%= moment(stripeSubscription?.trial_end * 1000).isValid() ? moment(stripeSubscription?.trial_end * 1000).format(completeDateFormat) : 'N/A' %>
+
+                    </p>
+                    <% } %>
+
+                </div>
+                <div class="col-md-6 p-3">
+                    <h4 class="text-center">Membership Status</h4>
                     <br>
+                    <div class="col-md-12 text-center validation-msgs">
+                        <% if([stripeStatus.ACTIVE, stripeStatus.TRIALING].includes(membershipStatus)) { %>
+                        <i class="fas fa-8x fa-check-circle valid"></i>
+                        <p style="text-transform: uppercase">
+                            <%= membershipStatus %>
+                        </p>
+                        <br>
+                        <div class="mt-3 mb-3">
+                            <button id="use-service-button" user-id="<%= customer?.id%>"
+                                class="btn btn-block btn-primary btn-lg font-weight-medium btn-icon-text" type="submit">
+                                USE SERVICE
+                                <i class="menu-icon mdi mdi-car-wash btn-icon-apepend"></i>
+                            </button>
+                        </div>
 
-                    <div class="mt-3 mb-3">
-                        <button id="useServiceBtn"
-                            class="btn btn-block btn-primary btn-lg font-weight-medium btn-icon-text" type="submit">
-                            USE SERVICE
-                            <i class="menu-icon mdi mdi-car-wash btn-icon-apepend"></i>
-
+                        <% } else if([stripeStatus.CANCELED, stripeStatus.UNPAID, stripeStatus.NONE].includes(membershipStatus)) { %>
+                        <i class="far fa-8x fa-times-circle invalid"></i>
+                        <p style="text-transform: uppercase">
+                            <%= membershipStatus %>
+                        </p>
+                        <br>
+                        <button class="btn btn-primary btn-lg text-white mb-0 me-0 manage-billing-button" type="submit"
+                            value="<%- customer.billingID%>" email="<%- customer.email%>">
+                            Manage Billing
                         </button>
+                        <% } %>
                     </div>
+                    <% } else { %>
+                    <div class="col-md-12 text-center validation-msgs">
+                        <i class="fas fa-8x fa-exclamation-triangle warning"></i>
+                        <p>Customer not found.</p>
 
-                    <% } else if([stripeStatus.CANCELED, stripeStatus.UNPAID, stripeStatus.NONE].includes(membershipStatus)) { %>
-                    <i class="far fa-8x fa-times-circle invalid"></i>
-                    <p style="text-transform: uppercase">
-                        <%= membershipStatus %>
-                    </p>
-                    <br>
-                    <button class="btn btn-primary btn-lg text-white mb-0 me-0 manage-billing-button" type="submit"
-                        value="<%- customer.billingID%>" email="<%- customer.email%>">
-                        Manage Billing
-                    </button>
-                    <% } %>
-                </div>
-                <% } else { %>
-                <div class="col-md-12 text-center validation-msgs">
-                    <i class="fas fa-8x fa-exclamation-triangle warning"></i>
-                    <p>Customer not found.</p>
-
-                    <% } %>
+                        <% } %>
+                    </div>
                 </div>
             </div>
         </div>
